--- a/pure_html/index.html
+++ b/pure_html/index.html
@@ -141,7 +141,7 @@
               class="mdi mdi-linkedin"></span></a>
           <a href="https://www.facebook.com/krisjanis2000/" target="_blank"><span class="mdi mdi-facebook"></span></a>
           <a href="https://www.instagram.com/krisjanis2000/" target="_blank"><span class="mdi mdi-instagram"></span></a>
-          <a href="cv.pdf" download><span class="mdi mdi-file-pdf-outline"></span></a>
+          <a href="https://cv.lejejs.com/krisjanis2000/krisjanis-lejejs" target="_blank"><span class="mdi mdi-file-pdf-outline"></span></a>
         </div>
       </div>
     </div>
